--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -71,7 +71,7 @@ ignoreErrors = ["error-remote-getjson"]
     ["GitHub", "https://github.com/Pulucas/"],
     ["Discord", "https://discord.com/users/350509371064844290/"],
     ["Where I Found This Website", "https://www.asciius.com/"],
-    ["Where You Can Get This", "https://github.com/Yukuro/hugo-theme-shell/"],
+    ["Where You Can Try This Yourself", "https://github.com/Yukuro/hugo-theme-shell/"],
   ]
 
 [module]
