--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://lucash.art/"
-title = "Shell"
+title = "Aqua's website"
 # author = "Yukuro"
 # prevent build failures when using Hugo's Instagram shortcode due to deprecated Instagram API.
 # See https://github.com/gohugoio/hugo/issues/7228#issuecomment-714490456
@@ -7,72 +7,74 @@ ignoreErrors = ["error-remote-getjson"]
 
 [Params]
   # Note: This is for the meta description, which is different from the "description" displayed in the terminal.
-  description = "Jane Doe's Portfolio!"
+  description = "look at me!"
   [Params.Terminal]
-  # Note: color schema
-  # Note: You can choose between
-  # Note: ["monokai", "powershell", "gruvbox_light", "gruvbox_dark", "solarized_light", "solarized_dark", "ubuntu", "retro"]
-  # Note: If you want to use the Goph theme, set it to "goph" (See README.md)
-  schema = "molokai"
+    # Note: color schema
+    # Note: You can choose between
+    # Note: ["monokai", "powershell", "gruvbox_light", "gruvbox_dark", "solarized_light", "solarized_dark", "ubuntu", "retro"]
+    # Note: If you want to use the Goph theme, set it to "goph" (See README.md)
+    schema = "molokai"
 
-  # Note: in terminal
-  # [userName]@[pcName]:~/$ cd [workDir]
-  # [userName]@[pcName]:~/[workDir]$ cat [profile]
-  #
-  # [description]
-  #
-  # Note: if you set Params.Tree > use = true
-  # [userName]@[pcName]:~/[workDir]$ tree ./[folderName]/
-  # ./[folderName]/
-  # ...
-  # Note: result of the tree command
-  userName = "Aqua"
-  pcName = "lucaserver"
-  workDir = "info"
-  profile = "profile.md"
+    # Note: in terminal
+    # [userName]@[pcName]:~/$ cd [workDir]
+    # [userName]@[pcName]:~/[workDir]$ cat [profile]
+    #
+    # [description]
+    #
+    # Note: if you set Params.Tree > use = true
+    # [userName]@[pcName]:~/[workDir]$ tree ./[folderName]/
+    # ./[folderName]/
+    # ...
+    # Note: result of the tree command
+    userName = "Aqua"
+    pcName = "lucaserver"
+    workDir = "info"
+    profile = "profile.md"
 
-  # Note: speed at which text is displayed on the terminal
-  # Note: if set to 0, typing animation will be disabled
-  # Note:
-  # Note: if you want to enable Mathjax, you need to set it to 0
-  # Note: and set "math: true" at front matter in your Markdown file
-  ps1Delay = 0 # prompt speed : [userName]@[pcName]:~/$ , [userName]@[pcName]:~/[workDir]$
-  stdoutDelay = 1 # stdout speed : [description] , files in Params.Tree
-  commandDelay = 50 # command speed : cd [workDir] , cat [profile] , tree ./[folderName]/
+    # Note: speed at which text is displayed on the terminal
+    # Note: if set to 0, typing animation will be disabled
+    # Note:
+    # Note: if you want to enable Mathjax, you need to set it to 0
+    # Note: and set "math: true" at front matter in your Markdown file
+    ps1Delay = 0 # prompt speed : [userName]@[pcName]:~/$ , [userName]@[pcName]:~/[workDir]$
+    stdoutDelay = 1 # stdout speed : [description] , files in Params.Tree
+    commandDelay = 50 # command speed : cd [workDir] , cat [profile] , tree ./[folderName]/
 
-  # terminalDelay = 20 : deprecated
+    # terminalDelay = 20 : deprecated
 
-  # Note: speed at which text is displayed on the activity pages
-  # Note: if set to 0, typing animation will be disabled
-  # Note: 
-  # Note: if you want to enable Mathjax, you need to set it to 0
-  # Note: and set "math: true" at front matter in your Markdown file
-  titleDelay = 0 # title speed : "title" in front matter
-  contentDelay = 0 # content speed : content in .md file
+    # Note: speed at which text is displayed on the activity pages
+    # Note: if set to 0, typing animation will be disabled
+    # Note: 
+    # Note: if you want to enable Mathjax, you need to set it to 0
+    # Note: and set "math: true" at front matter in your Markdown file
+    titleDelay = 0 # title speed : "title" in front matter
+    contentDelay = 0 # content speed : content in .md file
 
-  # activityDelay = 5 : deprecated
+    # activityDelay = 5 : deprecated
 
-  description = """
-  Name: Aqua
-  Gender: Male
-  Pronouns: He/Him
-  Age: Unknown
-  """
+    description = """
+    Name: Aqua
+    Gender: Male
+    Pronouns: He/Him
+    Age: Unknown
+    """
 
-  # Note: If you want to use a Markdown file, you can use the following
-  # description = "/description.md"
-  # Note: and put the description.md in /content/description.md
+    # Note: If you want to use a Markdown file, you can use the following
+    # description = "/description.md"
+    # Note: and put the description.md in /content/description.md
 
   [Params.Tree]
-  use = true
-  folderName = "my-links"
-  # Note: ["ACTIVITY", "URL or PATH TO YOUR MARKDOWN FILE"]
-  files = [ 
-    ["GitHub", "https://github.com/Pulucas/"],
-    ["Discord", "https://discord.com/users/350509371064844290/"],
-    ["Where I Found This Website", "https://www.asciius.com/"],
-    ["Where You Can Try This Yourself", "https://github.com/Yukuro/hugo-theme-shell/"],
-  ]
+    use = true
+    folderName = "my-links"
+    # Note: ["ACTIVITY", "URL or PATH TO YOUR MARKDOWN FILE"]
+    files = [ 
+      ["My Wesite", "https://never.lucash.art"],
+      ["My Word Translations Database", "https://words.lucash.art"],
+      ["GitHub", "https://github.com/Pulucas/"],
+      ["Discord", "https://discord.com/users/350509371064844290/"],
+      ["Where I Found This Website", "https://www.asciius.com/"],
+      ["Where You Can Try This Yourself", "https://github.com/Yukuro/hugo-theme-shell/"],
+    ]
 
 [module]
   [module.hugoVersion]
