--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -66,6 +66,7 @@ ignoreErrors = ["error-remote-getjson"]
       ["GitHub", "https://github.com/Pulucas/"],
       ["Discord", "https://discord.com/users/350509371064844290/"],
       ["Cool Video", "https://never.lucash.art"],
+      ["Funny Video", "https://youtube.com/shorts/-YdJcG_izpI?si=nECEpdpaj6KoyOMB"],
       ["Wordle Hosted By Me", "https://wordle.lucash.art/"],
     ]
 
